[package]
name = "rustun"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bytes = "1.11.0"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
time = "0.3.44"
tun= { version = "0.8.4", features = ["futures-core", "async"] }
async-trait = "0.1.89"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9.2"
base64 = "0.22"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
toml = "0.9.8"
ipnet = "2.10"
clap = { version = "4.5", features = ["derive"] }
ureq = "2.10"
stunclient = "0.4"
socket2 = "0.6.1"
notify = "7.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "server"
path = "src/cmd/server.rs"

[[bin]]
name = "client"
path = "src/cmd/client.rs"

[[example]]
name = "stun_discover"
path = "examples/stun_discover.rs"
