[package]
name = "rustun"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"
tun= { version = "0.8", features = ["futures-core", "async"] }
async-trait = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
toml = "0.9"
ipnet = "2"
clap = { version = "4", features = ["derive"] }
stunclient = "0.4"
socket2 = "0.6"
notify = "8"
tokio-util = "0.7"
ctrlc2 = "3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1"
reqwest = "0.13"

[dev-dependencies]
tokio-test = "0.4"
